<?xml version="1.0" encoding="utf-8"?><!--03签到审查发布签到-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_attencence_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gcg.teacherend.AttendenceManagement.Attencence_ReleaseRequest_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.example.gcg.teacherend.CustomizedClass.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.example.gcg.teacherend.CustomizedClass.TitleLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/radius_border"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textView_Course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/CourseName"
                    style="@style/TextView3"
                    />

                <Spinner
                    android:id="@+id/spinner_CourseItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textView_CLass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ClassName"
                    style="@style/TextView3"
                    />
                <Spinner
                    android:id="@+id/spinner_CLassItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/textview_setduration"
                    android:text="@string/Duration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/TextView3"
                    />
                <Spinner
                    android:id="@+id/spinner_timeset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                     />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/release0"
                android:id="@+id/button_publish_attendence_request"
                style="@style/ImageButton3"
                android:layout_weight="1" />

            <!--<ImageButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/release0"-->
                <!--android:id="@+id/button_publish_attendence_request"-->
                <!--android:layout_weight="1"-->
                <!--style="@style/ImageButton3"-->
                <!--/>-->

            <!--<Button-->
            <!--android:id="@+id/button_publish_attendence_request"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="50dp"-->
            <!--android:layout_marginRight="50dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/publish"-->
            <!--android:textSize="20dp"-->
            <!--android:textAllCaps="false"-->
            <!--android:gravity="center"-->
            <!--/>-->

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
